Implement gRPC procedures
