# cmd/ocp-verdict-api/main.go
@@ -1,0 +1,1 @@
+package ocp_verdict_api
