# swagger/ocp-verdict-api.swagger.json
@@ -10,7 +10,126 @@
   "produces": [
     "application/json"
   ],
-  "paths": {},
+  "paths": {
+    "/v1/verdicts": {
+      "get": {
+        "operationId": "OcpVerdictApi_ListVerdictsV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiListVerdictsV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "OcpVerdictApi"
+        ]
+      },
+      "post": {
+        "operationId": "OcpVerdictApi_CreateVerdictV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiCreateVerdictV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "OcpVerdictApi"
+        ]
+      }
+    },
+    "/v1/verdicts/{verdict_id}": {
+      "get": {
+        "operationId": "OcpVerdictApi_DescribeVerdictV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiDescribeVerdictV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "verdict_id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "OcpVerdictApi"
+        ]
+      },
+      "delete": {
+        "operationId": "OcpVerdictApi_RemoveVerdictV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiRemoveVerdictV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "verdict_id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "OcpVerdictApi"
+        ]
+      }
+    }
+  },
   "definitions": {
     "VerdictStatus": {
       "type": "string",
@@ -27,7 +146,7 @@
     "apiCreateVerdictV1Response": {
       "type": "object",
       "properties": {
-        "Verdict": {
+        "verdict": {
           "$ref": "#/definitions/apiVerdict"
         }
       }
@@ -35,7 +154,7 @@
     "apiDescribeVerdictV1Response": {
       "type": "object",
       "properties": {
-        "Verdict": {
+        "verdict": {
           "$ref": "#/definitions/apiVerdict"
         }
       }
@@ -43,7 +162,7 @@
     "apiListVerdictsV1Response": {
       "type": "object",
       "properties": {
-        "Verdicts": {
+        "verdicts": {
           "type": "array",
           "items": {
             "$ref": "#/definitions/apiVerdict"
@@ -62,11 +181,11 @@
     "apiVerdict": {
       "type": "object",
       "properties": {
-        "solutionId": {
+        "solution_id": {
           "type": "string",
           "format": "uint64"
         },
-        "userId": {
+        "user_id": {
           "type": "string",
           "format": "uint64"
         },
